<resources>
    <string name="app_name">Database</string>
    <string name="title_activity_login_page">Login_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="no_of_attempts">No. of attempts</string>
    <string name="Sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="paassword">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="or">OR</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="Import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="Slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="setting">setting</string>
    <string name="signout">Signout</string>
    <string name="web_client_id" translatable="false">300813197692-oi67om8odl57t6ernolnhljt2okk9i66.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_fragment">import fragment</string>
    <string name="gallery_fragment">gallery_fragment</string>
    <string name="slideshow">Slideshow_fragment</string>
    <string name="tools_fragment">tools_fragment</string>
    <string name="share_fragment">share_fragment</string>
    <string name="send_fragment">send_fragment</string>
    //mapbox
    <string name="mapbox_access_token">MAPBOX_ACCESS_TOKEN</string>
    <string name="click_on_polygon_toast">coloured layer tabbed</string>
    <string name="building_layer_not_present">building layer is not present</string>
    <string name="select_colour">Select Colour:</string>

</resources>
