<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Sign_up">


    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:layout_below="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignLeft="@id/password"
        android:hint="@string/confirm_password" />


    <EditText
        android:id="@+id/email"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:hint="@string/email" />


    <EditText
        android:id="@+id/password"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />



    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-15dp"
        android:layout_marginLeft="-15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="98dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/confirm_password"
        android:text="@string/sign_up" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:visibility="invisible" />


    <EditText
        android:id="@+id/name"
        android:layout_width="313dp"
        android:layout_height="44dp"
        android:layout_alignStart="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="90dp"
        android:hint="@string/name" />


</RelativeLayout>
